Fixed issue where page would not scroll on mobile.

--- a/less/main.less
+++ b/less/main.less
@@ -171,10 +171,6 @@ footer {
             }
         }
 
-        body {
-            width: 100%;
-            overflow: hidden;
-        }
     }
 
  @media (max-width: 600px) { 
